[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "implied-volatility-diffusion"
version = "0.1.0"
description = "Implied volatility forecasting with DiT"
requires-python = ">=3.10"
keywords = [
  "diffusion",
  "finance",
  "implied-volatility",
  "machine-learning",
  "options",
]

dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "torch>=2.1",
  "matplotlib>=3.7",
  "pyyaml>=6.0",
  "tqdm>=4.66",
]

[dependency-groups]
dev = [
  "pytest>=7.4",
  "ruff>=0.1",
]
# Jupyter stack for `notebooks/` — install with: uv sync --group notebooks
notebooks = [
  "ipykernel>=6.29",
  "jupyterlab>=4.0",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
implied_volatility_diffusion = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
