[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "implied-volatility-diffusion"
version = "0.1.0"
description = "Implied volatility surface forecasting with DiT"
requires-python = ">=3.10"
keywords = [
  "implied-volatility",
  "deep-learning",
  "options",
]

dependencies = [
  "numpy>=1.24",
  "scipy>=1.11",
  "pandas>=2.0",
  "torch>=2.1",
  "matplotlib>=3.7",
  "pyyaml>=6.0",
  "py-vollib>=1.0.1",
  "pyarrow>=23.0.1",
  "QuantLib>=1.36",
  "py-lets-be-rational>=1.0.1",
]

[dependency-groups]
dev = [
  "isort>=5.13",
  "pre-commit>=3.7",
  "pytest>=7.4",
  "ruff>=0.1",
]
# Jupyter stack for `notebooks/` — install with: uv sync --group notebooks
notebooks = [
  "ipykernel>=6.29",
  "jupyterlab>=4.0",
  "seaborn>=0.13",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
implied_volatility_diffusion = ["py.typed"]

[tool.isort]
profile = "black"
line_length = 120
py_version = "312"
src_paths = ["src", "tests"]
known_first_party = ["implied_volatility_diffusion", "ivs_config"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
# Import order is enforced by isort (pre-commit); Ruff I rules omitted to avoid conflicts.
select = ["E", "F", "W", "D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]
"**/__init__.py" = ["D104"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = ["slow: integration-style tests that exercise full surfaces"]
